--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-
 <div class="courses-panel">
 
   <div class="header">
@@ -11,6 +10,17 @@
 
   </div>
 
+  <mat-tab-group>
+    <mat-tab label="Beginners">
+      <courses-card-list [courses]="beginnerCourses$ | async">
+
+      </courses-card-list>
+    </mat-tab>
+    <mat-tab label="Advanced">
+      <courses-card-list [courses]="advancedCourses$ | async">
+
+      </courses-card-list>
+    </mat-tab>
+  </mat-tab-group>
 
 </div>
-
