--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -1,5 +1,16 @@
 <div [formGroup]="form" class="course-details-form">
 
+    <mat-form-field floatLabel="always">
+        <mat-label>Course Title</mat-label>
+        <input matInput formControlName="title" #title/>
+        <mat-hint align="end">
+            {{title.value.length}} / 60
+        </mat-hint>
+        <mat-error *ngIf="courseTitle.errors?.minlength">
+            A minimum length of 5 characters is required.
+        </mat-error>
+    </mat-form-field>
+ 
 
 </div>
 
