feat: mat-datepicker

--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -31,4 +31,18 @@
         </mat-select>
     </mat-form-field>
 
+    <mat-form-field appareance="outline">
+
+        <input matInput formControlName="releasedAt" placeholder="Release date" [matDatepicker]="releasedAtPicker"/>
+
+        <mat-datepicker-toggle matSuffix [for]="releasedAtPicker">
+
+        </mat-datepicker-toggle>
+
+        <mat-datepicker  #releasedAtPicker [dateClass]="dateClass">
+
+        </mat-datepicker>
+
+    </mat-form-field>
+
 </div>
