feat: mat-form-field

--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -51,4 +51,11 @@
 
     </mat-checkbox>
 
+    <mat-form-field appearance="outline">
+        <textarea matInput placeholder="Description" formControlName="longDescription" 
+        cdkTextareaAutosize [cdkAutosizeMinRows]="2" [cdkAutosizeMaxRows]="5">
+
+        </textarea>
+    </mat-form-field>
+
 </div>
