feat: mat Tooltip

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,8 @@
 
     <h2 class="title">All Courses</h2>
 
-    <button mat-mini-fab routerLink="/add-new-course">
+    <button mat-mini-fab routerLink="/add-new-course" matTooltip="Create a course" matTooltipPosition="below"
+      [matTooltipShowDelay]="1000" [matTooltipHideDelay]="2000">
       <mat-icon class="add-course-btn">add</mat-icon>
     </button>
 
