--- a/src/app/course/course.component.scss
+++ b/src/app/course/course.component.scss
@@ -35,7 +35,7 @@
 .lessons-table {
   min-height: 360px;
   margin-top: 10px;
-  width: 400px;
+  min-width: 400px;
   margin-left: auto;
   margin-right: auto;
   tr:hover {
