--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,17 +7,18 @@
   <div class="spinner-container" *ngIf="loading">
     <mat-spinner></mat-spinner>
   </div>
-  <table mat-table class="lessons-table mat-elevation-z8" [dataSource]="lessons">
+  <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
+    matSortDirection="asc" [dataSource]="lessons">
 
     <ng-container matColumnDef="seqNo">
 
-      <th mat-header-cell *matHeaderCellDef>#</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
       <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
 
     </ng-container>
     <ng-container matColumnDef="description">
 
-      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
       <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
 
     </ng-container>
