--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,8 +7,9 @@
   <div class="spinner-container" *ngIf="loading">
     <mat-spinner></mat-spinner>
   </div>
+
   <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
-    matSortDirection="asc" [dataSource]="lessons">
+    matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
 
     <ng-container matColumnDef="seqNo">
 
@@ -29,9 +30,18 @@
 
     </ng-container>
 
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let lesson" colspan="3">
+        {{lesson.longDescription}}
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
-    <tr mat-row *matRowDef="let lesson;columns:displayedColumns"></tr>
+    <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson;columns:displayedColumns"></tr>
+
+    <tr mat-row *matRowDef="let lesson;columns:['expandedDetail']" [class.collapsed-detail]="lesson!=expandedLesson">
+    </tr>
 
   </table>
   <mat-paginator class="mat-elevation-z8" [length]="course?.lessonsCount" [pageSize]="3" [pageSizeOptions]="[3,5,10]">
