--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -8,58 +8,67 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
-    matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
+  <div class="scrolling-container">
 
-    <ng-container matColumnDef="select">
 
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox [checked]="selection.hasValue()&&isAllSelected()"
-          [indeterminate]="selection.hasValue()&&!isAllSelected()" (change)="toggleAll()">
+    <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
+      matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
 
-        </mat-checkbox>
-      </th>
 
-      <td mat-cell *matCellDef="let lesson" (click)="$event.stopPropagation()">
-        <mat-checkbox (change)="onLessonToggled(lesson)" [checked]="selection.isSelected(lesson)">
+      <ng-container matColumnDef="select" sticky>
 
-        </mat-checkbox>
-      </td>
-    </ng-container>
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox [checked]="selection.hasValue()&&isAllSelected()"
+            [indeterminate]="selection.hasValue()&&!isAllSelected()" (change)="toggleAll()">
 
-    <ng-container matColumnDef="seqNo">
+          </mat-checkbox>
+        </th>
 
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-      <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
+        <td mat-cell *matCellDef="let lesson" (click)="$event.stopPropagation()">
+          <mat-checkbox (change)="onLessonToggled(lesson)" [checked]="selection.isSelected(lesson)">
 
-    </ng-container>
-    <ng-container matColumnDef="description">
+          </mat-checkbox>
+        </td>
+      </ng-container>
 
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-      <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
+      <ng-container matColumnDef="seqNo" sticky>
 
-    </ng-container>
-    <ng-container matColumnDef="duration">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+        <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
 
-      <th mat-header-cell *matHeaderCellDef>Duration</th>
-      <td class="duration-cell" mat-cell *matCellDef="let lesson">{{lesson.duration}}</td>
+      </ng-container>
+      <ng-container matColumnDef="description">
 
-    </ng-container>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+        <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
 
-    <ng-container matColumnDef="expandedDetail">
-      <td mat-cell *matCellDef="let lesson" colspan="4">
-        {{lesson.longDescription}}
-      </td>
-    </ng-container>
+      </ng-container>
+      <ng-container matColumnDef="duration">
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <th mat-header-cell *matHeaderCellDef>Duration</th>
+        <td class="duration-cell" mat-cell *matCellDef="let lesson">{{lesson.duration}}</td>
 
-    <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson;columns:displayedColumns"></tr>
+      </ng-container>
 
-    <tr mat-row *matRowDef="let lesson;columns:['expandedDetail']" [class.collapsed-detail]="lesson!=expandedLesson">
-    </tr>
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let lesson" colspan="4">
+          {{lesson.longDescription}}
+        </td>
+      </ng-container>
 
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true">
+
+      </tr>
+
+      <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson;columns:displayedColumns"></tr>
+
+      <tr mat-row *matRowDef="let lesson;columns:['expandedDetail']" [class.collapsed-detail]="lesson!=expandedLesson">
+      </tr>
+
+    </table>
+
+  </div>
+
   <mat-paginator class="mat-elevation-z8" [length]="course?.lessonsCount" [pageSize]="3" [pageSizeOptions]="[3,5,10]">
   </mat-paginator>
 </div>
